# PRJTempsReel---Dumber

./: CMakeLists.txt  CommandePID_AvecFiltre_0.1345_0.01185_+20.mat  CommandePID_DeuxiemeEssai_0.1345_0.01185_+10.mat  CommandePID_DeuxiemeEssai_0.1345_0.01185_+15.mat  CommandePID_DeuxiemeEssai_0.1345_0.01185_+20.mat  CommandePID_DeuxiemeEssai_0.1345_0.01185_+5.mat  CommandePID_PremierEssai_KP0.64_KI0.021.mat  PID_tuner_cst_70.mat  boucle_fermee_sans_correcteur_echelon_60.mat  concatenation.m  demo1signal_gen.m  demo3control_LQ.m  enlevageoffset.m  ident_de_tout_a_lheure.sid  ident_sansoffset.sid  idprefs.mat  new_echelon10.mat  new_echelon10_tronque.mat  new_echelon5.mat  new_echelon5_tronque.mat  new_echelon8.mat  new_echelon8_tronque.mat  ntm.slx  ntm.slx.original  projet.m  readme.md  toutes_les_reponses_tronque.mat  toutes_les_reponses_tronque_sans_offset.mat  troncature.m
software/raspberry/superviseur-robot/: CMakeLists.txt  tasks.cpp  tasks.h
software/raspberry/superviseur-robot/nbproject/private/: timestamps-10.105.1.5-xenomai-22
